--- a/index.html
+++ b/index.html
@@ -64,11 +64,7 @@
 <li>more than one scope of such network</li>
 <li>a true social network - people who spoke and/or coded together and/or follow(-ed) each other..</li>
 </ul></li>
-<li>What I found out, some results,
-
-<ul>
-<li>you will be the very first few in the world, to who I will present some interesting findings about utterances on the GitHub</li>
-</ul></li>
+<li>What I found out, some results,</li>
 <li>Summary and Q&amp;A time.</li>
 </ol>
 
