--- a/index.html
+++ b/index.html
@@ -189,15 +189,15 @@
 
 <div style='float:left;width:48%;' class='centered'>
   <p><strong>GitHub Archive</strong></p>
-<font size="4">
-<ul>
+
+<ul style='font-size: 9px ;'>
 <li>document-oriented JSON data</li>
 <li>document structure (MongoDB), vulnerable to constant change</li>
 <li>unlimited time periods and easy refill from the GitHub Archive (wget -&gt; mongoimport)</li>
 <li>includes only a full body of <em>PullRequest</em> comment, rest of utterances one needs to download directly from the GitHub through web</li>
 <li>includes much more of <em>meta-information</em>!</li>
 </ul>
-</font>
+
 </div>
 <div style='float:right;width:48%;'>
   <p><strong>GitHub Torrent</strong></p>
