--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <h3>Possible data-sources</h3>
   </hgroup>
   <article data-timings="">
-    <p>Data acquisition. Hence <strong>3</strong> types of discussions: dialogue under issue/feature page, dialogue under a code commit, and a dialogue page under a pull request page. And you can get them from:</p>
+    <p>Hence <strong>3</strong> types of discussions: dialogue under issue/feature page, dialogue under a code commit, and a dialogue page under a pull request page. And you can get them from:</p>
 
 <div style='float:left;width:48%;' class='centered'>
   <p><strong>GitHub Archive</strong></p>
@@ -268,7 +268,7 @@
   <article data-timings="">
     <pre><code class="r">&gt; summary(aggregates[aggregates$n &lt; 50, c(&#39;n&#39;)])
    Min.     1st Qu.  Median   Mean     3rd Qu.  Max.
-   1.000    1.000    1.000    2.297    2.000    4566.000
+   1.000    1.000    1.000    2.244    2.000    49.000
 </code></pre>
 
 <p><img src="https://dl.dropboxusercontent.com/u/103068909/aggregates-typical-number-of-utt-under-dialogue.png" alt="aggregates-typical-number-of-utt-under-dialogue.png"></p>
@@ -290,7 +290,8 @@
                               LEFT JOIN aggregates a2
                               ON a1.commit_id = a2.commit_id
                               WHERE a1.login &lt; a2.login;&quot;)
-network &lt;- sqldf(&quot;SELECT login1, login2, count(*) as weight from activity_network group by login1, login2&quot;)
+network &lt;- sqldf(&quot;SELECT login1, login2, count(*) as weight 
+                  from activity_network group by login1, login2&quot;)
 network_matrix &lt;- as.matrix(network)
 </code></pre>
 
@@ -395,14 +396,12 @@ E(g)$weight=as.numeric(network_matrix[,3])
 </div>
 
 <pre><code class="r">library(igraph)
-
 mycutoff &lt;- 3
 
 betweenness(g, directed = FALSE, weights = E(g)$weight, normalized = FALSE)
 edge.betweenness(g, directed = FALSE, weights = E(g)$weight)
 betweenness.estimate(g, directed = FALSE, cutoff = mycutoff,
                      weights = E(g)$weight, nobigint = TRUE)
-
 walktrap.community(g, weights = E(g)$weight, steps = 4, merges =
                       TRUE, modularity = TRUE, membership = TRUE)
 fastgreedy.community(g, merges=TRUE, modularity=TRUE,
@@ -481,14 +480,14 @@ n1 &lt;- rPlot(freq ~ x, data = count_swear_dates, type = &quot;point&quot;)
   <article data-timings="">
     <pre><code class="r">load(file=&quot;swear_plot_obj.RData&quot;)
 # n1$print(&quot;chart_swear_words&quot;)
-n1 # -- won&#39;t show up in browser, issue bug to slidify maybe?
+n1
 </code></pre>
 
 <p><iframe src=' assets/fig/unnamed-chunk-12-1.html ' scrolling='no' frameBorder='0' seamless class='rChart polycharts ' id=iframe- chart25901f846207 ></iframe> <style>iframe.rChart{ width: 100%; height: 400px;}</style></p>
 
-<!-- <center>
+<p><center>
 <img src="https://dl.dropboxusercontent.com/u/103068909/swearing.png" />
-</center> -->
+</center></p>
 
   </article>
   <!-- Presenter Notes -->
