--- a/index.html
+++ b/index.html
@@ -417,7 +417,9 @@ fastgreedy.community(g, merges=TRUE, modularity=TRUE,
     <h2>(Smaller) sample discussion network</h2>
   </hgroup>
   <article data-timings="">
-    <pre><code class="sql">create table github_discussions_selected_users as select d.* from github_discussions d join (select distinct user_id from project_members_with_owners pm join selected_repos sr on pm.repo_id = sr.repo_id) as s
+    <pre><code class="sql">create table github_discussions_selected_users as select d.* from github_discussions d 
+join (select distinct user_id from project_members_with_owners pm join 
+selected_repos sr on pm.repo_id = sr.repo_id) as s
 on d.user_id = s.user_id;
 </code></pre>
 
@@ -429,7 +431,7 @@ on d.user_id = s.user_id;
 <li>existing at least for 2 years</li>
 <li>with minimum of 100 commits</li>
 </ul></li>
-<li>Number of utterances downgraded slightly - from 2.9 mln to 1.5 mln :(</li>
+<li>Number of utterances downgraded slightly - from 2.9 mln to 1.5 mln</li>
 </ul>
 
   </article>
@@ -445,6 +447,8 @@ on d.user_id = s.user_id;
 <li>One of the most important features in the graph theory, is a <code>clustering coefficient</code> of the network, sometimes called <code>transivity</code> (especially in R),</li>
 <li>Is a measure of the degree to which nodes in a graph tend to cluster together.</li>
 </ul>
+
+<p><img src="https://dl.dropboxusercontent.com/u/103068909/coefficient.png" alt="coefficient.png"></p>
 
   </article>
   <!-- Presenter Notes -->
